# rs-concat-avro2parquet

./: Cargo.toml  README.md  doc-web.sh
examples/concat-avro2parquet/: Cargo.toml  concat-avro2parquet  run.sh
examples/concat-avro2parquet/sample.d/: input.avro  input.parquet  tmp.jsonl  tmp.splitn.csv
examples/concat-avro2parquet/src/: main.rs
src/: lib.rs
